--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,5 +2,5 @@
   class="au-d-component-block au-d-component-block--overflow leaflet-container"
 >
   {{! add content here }}
-  <LocationsMap />
+  <LocationsMap @vacLocation={{@model}} />
 </div>
