--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,5 @@
 <div
   class="au-d-component-block au-d-component-block--overflow leaflet-container"
 >
-  {{! add content here }}
-  <LocationsMap @vacLocation={{@model}} />
+  <LocationsMap @geopoints={{@model}} />
 </div>
