minor styling for better readability

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -111,7 +111,7 @@
 @import "@appuniversum/ember-appuniversum/styles/utilities/u-widths";
 
 .leaflet-container {
-  height: 80vh;
-  width: 50vw;
-  margin: 0 1em;
+  font-size: 1.5rem;
+  height: 90vh;
+  width: 70vw;
 }
